# jellofin-rs-v2

./: .gitignore  Cargo.toml  README.md  config.example.yaml  jellofin-server.example.yaml  rustfmt.toml
Documentation/: ARCHITECTURE.md  PLAN.md  PROGRESS.md  SESSION_SUMMARY.md  project-plan.md
src/: identicon.rs  lib.rs  server.rs
src/collection/: collection.rs  collectionrepo.rs  item.rs  kodifs.rs  metadata.rs  mod.rs  nfo.rs  parsefilename.rs  search.rs
src/database/: mod.rs  model.rs  sqlite.rs
src/idhash/: mod.rs
src/imageresize/: mod.rs
src/jellyfin/: README.md  auth.rs  branding.rs  devices.rs  displayprefs.rs  error.rs  filter.rs  genre.rs  handlers.rs  id.rs  image.rs  item.rs  items.rs  jellyfin.rs  jfitem.rs  jfitem2.rs  library.rs  librarystructure.rs  localization.rs  mediainfo.rs  mediasegments.rs  mod.rs  movie.rs  person.rs  playlist.rs  playstate.rs  quickconnect.rs  search.rs  session.rs  show.rs  stream.rs  stubs.rs  studio.rs  suggestions.rs  system.rs  types.rs  user.rs  userdata.rs  userlibrary.rs  userviews.rs  (+1 more)
src/jellyfin/util/: auth.rs  identicon.rs  item.rs  jellyfin.rs  jfitem.rs  mod.rs
src/notflix/: etag.rs  handlers.rs  mod.rs  notflix.rs  proxy.rs  subtitles.rs  types.rs
src/server/: config.rs  middleware.rs
